--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 </head>
 <body>
     <header class="header">
-        <a class="header-logo" href="/index.html"><span class="logo-web-span">Web</span>Studio</a>
         <nav class="navigation">
+            <a class="header-logo" href="./index.html"><span class="logo-web-span">Web</span>Studio</a>
             <ul>
                 <li class="header-list"><a class="header-link" href="">Studio</a></li>
                 <li class="header-list"><a class="header-link" href="">Portfolio</a></li>
@@ -61,22 +61,22 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img width="264" height="260" src="images/q.jpg" alt="photo">
+                    <img width="264" height="260" src="./images/q.jpg" alt="photo">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img width="264" height="260" src="images/w.jpg" alt="photo">
+                    <img width="264" height="260" src="./images/w.jpg" alt="photo">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img width="264" height="260" src="images/e.jpg" alt="photo">
+                    <img width="264" height="260" src="./images/e.jpg" alt="photo">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img width="264" height="260" src="images/r.jpg" alt="photo">
+                    <img width="264" height="260" src="./images/r.jpg" alt="photo">
                     <h3>Marketing</h3>
                     <p>UI Designer</p>
                 </li>
@@ -86,32 +86,32 @@
             <h2>Our Portfolio</h2>
             <ul>
                 <li>
-                    <img width="360" height="300" src="images/a.jpg" alt="Banking App">
+                    <img width="360" height="300" src="./images/a.jpg" alt="Banking App">
                     <h3>Banking App</h3>
                     <p>App</p>
                 </li>
                 <li>
-                    <img width="360" height="300" src="images/s.jpg" alt="Cashless Payment">
+                    <img width="360" height="300" src="./images/s.jpg" alt="Cashless Payment">
                     <h3>Cashless Payment</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img width="360" height="300" src="images/d.jpg" alt="Meditaion App">
+                    <img width="360" height="300" src="./images/d.jpg" alt="Meditaion App">
                     <h3>Meditaion App</h3>
                     <p>App</p>
                 </li>
                 <li>
-                    <img width="360" height="300" src="images/f.jpg" alt="Taxi Service">
+                    <img width="360" height="300" src="./images/f.jpg" alt="Taxi Service">
                     <h3>Taxi Service</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img width="360" height="300" src="images/g.jpg" alt="Screen Illustrations">
+                    <img width="360" height="300" src="./images/g.jpg" alt="Screen Illustrations">
                     <h3>Screen Illustrations</h3>
                     <p>Design</p>
                 </li>
                 <li>
-                    <img width="360" height="300" src="images/h.jpg" alt="Online Courses">
+                    <img width="360" height="300" src="./images/h.jpg" alt="Online Courses">
                     <h3>Online Courses</h3>
                     <p>Marketing</p>
                 </li>
