--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header class="header">
         <nav class="navigation">
-            <a class="header-logo" href="./index.html"><span class="logo-web-span">Web</span>Studio</a>
+            <a class="header-logo" href="./index.html">Web<span class="logo-web-span">Studio</span></a>
             <ul>
                 <li class="header-list"><a class="header-link" href="">Studio</a></li>
                 <li class="header-list"><a class="header-link" href="">Portfolio</a></li>
@@ -37,90 +37,90 @@
             <button class="hero-button" type="button">Order Service</button>
         </section>
         <section>
-            <h2>About us</h2>
+            <h2 class="abaut-title">About us</h2>
             <ul>
-                <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+                <li class="abaut-list">
+                    <h3 class="abaut-subtitle">Strategy</h3>
+                    <p class="abaut-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
-                <li>
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                <li class="abaut-list">
+                    <h3 class="abaut-subtitle">Punctuality</h3>
+                    <p class="abaut-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
-                <li>
-                    <h3>Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                <li class="abaut-list">
+                    <h3 class="abaut-subtitle">Diligence</h3>
+                    <p class="abaut-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
-                <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                <li class="abaut-list">
+                    <h3 class="abaut-subtitle">Technologies</h3>
+                    <p class="abaut-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
         </section>
-        <section>
-            <h2>Our Team</h2>
+        <section class="team">
+            <h2 class="team-title">Our Team</h2>
             <ul>
-                <li>
-                    <img width="264" height="260" src="./images/q.jpg" alt="photo">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                <li class="team-list">
+                    <img class="team-img" width="264" height="260" src="./images/q.jpg" alt="photo">
+                    <h3 class="team-subtitle">Mark Guerrero</h3>
+                    <p class="team-text">Product Designer</p>
                 </li>
-                <li>
-                    <img width="264" height="260" src="./images/w.jpg" alt="photo">
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                <li class="team-list">
+                    <img class="team-img" width="264" height="260" src="./images/w.jpg" alt="photo">
+                    <h3 class="team-subtitle">Tom Ford</h3>
+                    <p class="team-text">Frontend Developer</p>
                 </li>
-                <li>
-                    <img width="264" height="260" src="./images/e.jpg" alt="photo">
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                <li class="team-list">
+                    <img class="team-img" width="264" height="260" src="./images/e.jpg" alt="photo">
+                    <h3 class="team-subtitle">Camila Garcia</h3>
+                    <p class="team-text">Marketing</p>
                 </li>
-                <li>
-                    <img width="264" height="260" src="./images/r.jpg" alt="photo">
-                    <h3>Marketing</h3>
-                    <p>UI Designer</p>
+                <li class="team-list">
+                    <img class="team-img" width="264" height="260" src="./images/r.jpg" alt="photo">
+                    <h3 class="team-subtitle">Marketing</h3>
+                    <p class="team-text">UI Designer</p>
                 </li>
             </ul>
         </section>
-        <section>
-            <h2>Our Portfolio</h2>
+        <section class="portfolio">
+            <h2 class="portfolio-title">Our Portfolio</h2>
             <ul>
-                <li>
-                    <img width="360" height="300" src="./images/a.jpg" alt="Banking App">
-                    <h3>Banking App</h3>
-                    <p>App</p>
+                <li class="portfolio-list">
+                    <img class="portfolio-img" width="360" height="300" src="./images/a.jpg" alt="Banking App">
+                    <h3 class="portfolio-subtitle">Banking App</h3>
+                    <p class="portfolio-text">App</p>
                 </li>
-                <li>
-                    <img width="360" height="300" src="./images/s.jpg" alt="Cashless Payment">
-                    <h3>Cashless Payment</h3>
-                    <p>Marketing</p>
+                <li class="portfolio-list">
+                    <img class="portfolio-img" width="360" height="300" src="./images/s.jpg" alt="Cashless Payment">
+                    <h3 class="portfolio-subtitle">Cashless Payment</h3>
+                    <p class="portfolio-text">Marketing</p>
                 </li>
-                <li>
-                    <img width="360" height="300" src="./images/d.jpg" alt="Meditaion App">
-                    <h3>Meditaion App</h3>
-                    <p>App</p>
+                <li class="portfolio-list">
+                    <img class="portfolio-img" width="360" height="300" src="./images/d.jpg" alt="Meditaion App">
+                    <h3 class="portfolio-subtitle">Meditaion App</h3>
+                    <p class="portfolio-text">App</p>
                 </li>
-                <li>
-                    <img width="360" height="300" src="./images/f.jpg" alt="Taxi Service">
-                    <h3>Taxi Service</h3>
-                    <p>Marketing</p>
+                <li class="portfolio-list">
+                    <img class="portfolio-img" width="360" height="300" src="./images/f.jpg" alt="Taxi Service">
+                    <h3 class="portfolio-subtitle">Taxi Service</h3>
+                    <p class="portfolio-text">Marketing</p>
                 </li>
-                <li>
-                    <img width="360" height="300" src="./images/g.jpg" alt="Screen Illustrations">
-                    <h3>Screen Illustrations</h3>
-                    <p>Design</p>
+                <li class="portfolio-list">
+                    <img class="portfolio-img" width="360" height="300" src="./images/g.jpg" alt="Screen Illustrations">
+                    <h3 class="portfolio-subtitle">Screen Illustrations</h3>
+                    <p class="portfolio-text">Design</p>
                 </li>
-                <li>
-                    <img width="360" height="300" src="./images/h.jpg" alt="Online Courses">
-                    <h3>Online Courses</h3>
-                    <p>Marketing</p>
+                <li class="portfolio-list">
+                    <img class="portfolio-img" width="360" height="300" src="./images/h.jpg" alt="Online Courses">
+                    <h3 class="portfolio-subtitle">Online Courses</h3>
+                    <p class="portfolio-text">Marketing</p>
                 </li>
             </ul>
         </section>
     </main>
-    <footer>
-        <a href="/index.html">WebStudio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <footer class="footer">
+        <a class="footer-link" href="/index.html">Web <span class="footer-span">Studio</span></a>
+        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
     
 </body>
