--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav class="navigation">
             <a class="header-logo" href="./index.html">Web<span class="logo-web-span">Studio</span></a>
             <ul>
-                <li class="header-list"><a class="header-link" href="">Studio</a></li>
+                <li class="header-list"><a class="header-link" href="./index.html">Studio</a></li>
                 <li class="header-list"><a class="header-link" href="">Portfolio</a></li>
                 <li class="header-list"><a class="header-link" href="">Contacts</a></li>
             </ul>
@@ -97,7 +97,7 @@
                 </li>
                 <li class="portfolio-list">
                     <img class="portfolio-img" width="360" height="300" src="./images/d.jpg" alt="Meditaion App">
-                    <h3 class="portfolio-subtitle">Meditaion App</h3>
+                    <h3 class="portfolio-subtitle">Meditation App</h3>
                     <p class="portfolio-text">App</p>
                 </li>
                 <li class="portfolio-list">
