--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                 <button class="hero-button" type="button">Order Service</button>
             </div>
         </section>
-        <section>
-            <h2 class="abaut-title">About us</h2>
+        <section class="abaut"> 
             <div class="container abaut-container">
+                <h2 class="abaut-title">About us</h2>
                 <ul class="abaut-item">
                     <li class="abaut-list">
                         <h3 class="abaut-subtitle">Strategy</h3>
