--- a/index.html
+++ b/index.html
@@ -69,23 +69,31 @@
                 <ul class="team-item">
                     <li class="team-list">
                         <img class="team-img" width="264" height="260" src="./images/q.jpg" alt="photo">
-                        <h3 class="team-subtitle">Mark Guerrero</h3>
-                        <p class="team-text">Product Designer</p>
+                        <div class="team-list-text">
+                            <h3 class="team-subtitle">Mark Guerrero</h3>
+                            <p class="team-text">Product Designer</p>
+                        </div>
                     </li>
                     <li class="team-list">
                         <img class="team-img" width="264" height="260" src="./images/w.jpg" alt="photo">
-                        <h3 class="team-subtitle">Tom Ford</h3>
-                        <p class="team-text">Frontend Developer</p>
+                        <div class="team-list-text">
+                            <h3 class="team-subtitle">Tom Ford</h3>
+                            <p class="team-text">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="team-list">
                         <img class="team-img" width="264" height="260" src="./images/e.jpg" alt="photo">
-                        <h3 class="team-subtitle">Camila Garcia</h3>
-                        <p class="team-text">Marketing</p>
+                        <div class="team-list-text">
+                            <h3 class="team-subtitle">Camila Garcia</h3>
+                            <p class="team-text">Marketing</p>
+                        </div>
                     </li>
                     <li class="team-list">
                         <img class="team-img" width="264" height="260" src="./images/r.jpg" alt="photo">
-                        <h3 class="team-subtitle">Marketing</h3>
-                        <p class="team-text">UI Designer</p>
+                        <div class="team-list-text">
+                            <h3 class="team-subtitle">Marketing</h3>
+                            <p class="team-text">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
             </div>
