--- a/index.html
+++ b/index.html
@@ -104,33 +104,45 @@
                 <ul class="portfolio-item">
                     <li class="portfolio-list">
                         <img class="portfolio-img" width="360" height="300" src="./images/a.jpg" alt="Banking App">
-                        <h3 class="portfolio-subtitle">Banking App</h3>
-                        <p class="portfolio-text">App</p>
+                        <div class="portfolio-list-text">
+                            <h3 class="portfolio-subtitle">Banking App</h3>
+                            <p class="portfolio-text">App</p>
+                        </div>
                     </li>
                     <li class="portfolio-list">
                         <img class="portfolio-img" width="360" height="300" src="./images/s.jpg" alt="Cashless Payment">
-                        <h3 class="portfolio-subtitle">Cashless Payment</h3>
-                        <p class="portfolio-text">Marketing</p>
+                        <div class="portfolio-list-text">
+                            <h3 class="portfolio-subtitle">Cashless Payment</h3>
+                            <p class="portfolio-text">Marketing</p>
+                        </div>
                     </li>
                     <li class="portfolio-list">
                         <img class="portfolio-img" width="360" height="300" src="./images/d.jpg" alt="Meditaion App">
-                        <h3 class="portfolio-subtitle">Meditation App</h3>
-                        <p class="portfolio-text">App</p>
+                        <div class="portfolio-list-text">
+                            <h3 class="portfolio-subtitle">Meditation App</h3>
+                            <p class="portfolio-text">App</p>
+                        </div>
                     </li>
                     <li class="portfolio-list">
                         <img class="portfolio-img" width="360" height="300" src="./images/f.jpg" alt="Taxi Service">
-                        <h3 class="portfolio-subtitle">Taxi Service</h3>
-                        <p class="portfolio-text">Marketing</p>
+                        <div class="portfolio-list-text">
+                            <h3 class="portfolio-subtitle">Taxi Service</h3>
+                            <p class="portfolio-text">Marketing</p>
+                        </div>
                     </li>
                     <li class="portfolio-list">
                         <img class="portfolio-img" width="360" height="300" src="./images/g.jpg" alt="Screen Illustrations">
-                        <h3 class="portfolio-subtitle">Screen Illustrations</h3>
-                        <p class="portfolio-text">Design</p>
+                        <div class="portfolio-list-text">
+                            <h3 class="portfolio-subtitle">Screen Illustrations</h3>
+                            <p class="portfolio-text">Design</p>
+                        </div>
                     </li>
                     <li class="portfolio-list">
                         <img class="portfolio-img" width="360" height="300" src="./images/h.jpg" alt="Online Courses">
-                        <h3 class="portfolio-subtitle">Online Courses</h3>
-                        <p class="portfolio-text">Marketing</p>
+                        <div class="portfolio-list-text">
+                            <h3 class="portfolio-subtitle">Online Courses</h3>
+                            <p class="portfolio-text">Marketing</p>
+                        </div>
                     </li>
                 </ul>
             </div>
