--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </section>
         <section class="abaut"> 
             <div class="container abaut-container">
-                <h2 class="abaut-title">About us</h2>
+                <h2 class="abaut-title visually-hidden">About us</h2>
                 <ul class="abaut-item">
                     <li class="abaut-list">
                         <h3 class="abaut-subtitle">Strategy</h3>
