--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <nav class="navigation">
                 <a class="header-logo" href="./index.html">Web<span class="logo-web-span">Studio</span></a>
                 <ul class="header-item">
-                    <li class="header-list"><a class="header-link" href="./index.html">Studio</a></li>
+                    <li class="header-list"><a class="header-link current" href="./index.html">Studio</a></li>
                     <li class="header-list"><a class="header-link" href="">Portfolio</a></li>
                     <li class="header-list"><a class="header-link" href="">Contacts</a></li>
                 </ul>
@@ -34,7 +34,7 @@
         </div>
     </header>
     <main>
-        <section class="hero">
+        <section class="hero hero-back">
             <div class="container hero-container">
                 <h1 class="hero-tittle">Effective Solutions for Your Business</h1>
                 <button class="hero-button" type="button">Order Service</button>
@@ -45,18 +45,38 @@
                 <h2 class="abaut-title visually-hidden">About us</h2>
                 <ul class="abaut-item">
                     <li class="abaut-list">
+                        <div class="abaut-icon">
+                            <svg class="abaut-svg-icon" width="64" height="64">
+                                <use href="./images/all-icon.svg#icon-antenna"></use>
+                            </svg>
+                        </div>
                         <h3 class="abaut-subtitle">Strategy</h3>
                         <p class="abaut-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                     </li>
                     <li class="abaut-list">
+                        <div class="abaut-icon">
+                            <svg class="abaut-svg-icon" width="64" height="64">
+                                <use href="./images/all-icon.svg#icon-clock"></use>
+                            </svg>
+                        </div>
                         <h3 class="abaut-subtitle">Punctuality</h3>
                         <p class="abaut-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                     </li>
                     <li class="abaut-list">
+                        <div class="abaut-icon">
+                            <svg class="abaut-svg-icon" width="64" height="64">
+                                <use href="./images/all-icon.svg#icon-diagram"></use>
+                            </svg>
+                        </div>
                         <h3 class="abaut-subtitle">Diligence</h3>
                         <p class="abaut-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                     </li>
                     <li class="abaut-list">
+                        <div class="abaut-icon">
+                            <svg class="abaut-svg-icon" width="64" height="64">
+                                <use href="./images/all-icon.svg#icon-astronaut"></use>
+                            </svg>
+                        </div>
                         <h3 class="abaut-subtitle">Technologies</h3>
                         <p class="abaut-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                     </li>
