--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <li class="abaut-list">
                         <div class="abaut-icon">
                             <svg class="abaut-svg-icon" width="64" height="64">
-                                <use href="./images/all-icon.svg#icon-antenna"></use>
+                                <use href="./images/icons.svg#icon-antenna"></use>
                             </svg>
                         </div>
                         <h3 class="abaut-subtitle">Strategy</h3>
@@ -56,7 +56,7 @@
                     <li class="abaut-list">
                         <div class="abaut-icon">
                             <svg class="abaut-svg-icon" width="64" height="64">
-                                <use href="./images/all-icon.svg#icon-clock"></use>
+                                <use href="./images/icons.svg#icon-clock"></use>
                             </svg>
                         </div>
                         <h3 class="abaut-subtitle">Punctuality</h3>
@@ -65,7 +65,7 @@
                     <li class="abaut-list">
                         <div class="abaut-icon">
                             <svg class="abaut-svg-icon" width="64" height="64">
-                                <use href="./images/all-icon.svg#icon-diagram"></use>
+                                <use href="./images/icons.svg#icon-diagram"></use>
                             </svg>
                         </div>
                         <h3 class="abaut-subtitle">Diligence</h3>
@@ -74,7 +74,7 @@
                     <li class="abaut-list">
                         <div class="abaut-icon">
                             <svg class="abaut-svg-icon" width="64" height="64">
-                                <use href="./images/all-icon.svg#icon-astronaut"></use>
+                                <use href="./images/icons.svg#icon-astronaut"></use>
                             </svg>
                         </div>
                         <h3 class="abaut-subtitle">Technologies</h3>
@@ -92,6 +92,20 @@
                         <div class="team-list-text">
                             <h3 class="team-subtitle">Mark Guerrero</h3>
                             <p class="team-text">Product Designer</p>
+                            <ul class="team-list-icon">
+                                <li><a href=""> <svg class="icon-soc-list" width="40" height="40">
+                                            <use href="./images/icons.svg#icon-instagram-2"></use>
+                                        </svg> </a></li>
+                                <li><a href=""> <svg class="icon-soc-list" width="40" height="40">
+                                            <use href="./images/icons.svg#icon-twitter-2"></use>
+                                        </svg> </a></li>
+                                <li><a href=""> <svg class="icon-soc-list" width="40" height="40">
+                                            <use href="./images/icons.svg#icon-facebook-2"></use>
+                                        </svg> </a></li>
+                                <li><a href=""> <svg class="icon-soc-list" width="40" height="40">
+                                            <use href="./images/icons.svg#icon-linkedin-2"></use>
+                                        </svg> </a></li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-list">
@@ -99,6 +113,20 @@
                         <div class="team-list-text">
                             <h3 class="team-subtitle">Tom Ford</h3>
                             <p class="team-text">Frontend Developer</p>
+                            <ul class="team-list-icon">
+                                <li><a href=""> <svg class="icon-soc-list" width="40" height="40">
+                                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                                </svg> </a></li>
+                                <li><a href=""> <svg class="icon-soc-list" width="40" height="40">
+                                    <use href="./images/icons.svg#icon-twitter-2"></use>
+                                </svg> </a></li>
+                                <li><a href=""> <svg class="icon-soc-list" width="40" height="40">
+                                    <use href="./images/icons.svg#icon-facebook-2"></use>
+                                </svg> </a></li>
+                                <li><a href=""> <svg class="icon-soc-list" width="40" height="40">
+                                    <use href="./images/icons.svg#icon-linkedin-2"></use>
+                                </svg> </a></li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-list">
@@ -106,6 +134,20 @@
                         <div class="team-list-text">
                             <h3 class="team-subtitle">Camila Garcia</h3>
                             <p class="team-text">Marketing</p>
+                            <ul class="team-list-icon">
+                                <li><a href=""> <svg class="icon-soc-list" width="40" height="40">
+                                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                                </svg> </a></li>
+                                <li><a href=""> <svg class="icon-soc-list" width="40" height="40">
+                                    <use href="./images/icons.svg#icon-twitter-2"></use>
+                                </svg> </a></li>
+                                <li><a href=""> <svg class="icon-soc-list" width="40" height="40">
+                                    <use href="./images/icons.svg#icon-facebook-2"></use>
+                                </svg> </a></li>
+                                <li><a href=""> <svg class="icon-soc-list" width="40" height="40">
+                                    <use href="./images/icons.svg#icon-linkedin-2"></use>
+                                </svg> </a></li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-list">
@@ -113,6 +155,20 @@
                         <div class="team-list-text">
                             <h3 class="team-subtitle">Marketing</h3>
                             <p class="team-text">UI Designer</p>
+                            <ul class="team-list-icon">
+                                <li><a href=""> <svg class="icon-soc-list" width="40" height="40">
+                                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                                </svg> </a></li>
+                                <li><a href=""> <svg class="icon-soc-list" width="40" height="40">
+                                    <use href="./images/icons.svg#icon-twitter-2"></use>
+                                </svg> </a></li>
+                                <li><a href=""> <svg class="icon-soc-list" width="40" height="40">
+                                    <use href="./images/icons.svg#icon-facebook-2"></use>
+                                </svg> </a></li>
+                                <li><a href=""> <svg class="icon-soc-list" width="40" height="40">
+                                    <use href="./images/icons.svg#icon-linkedin-2"></use>
+                                </svg> </a></li>
+                            </ul>
                         </div>
                     </li>
                 </ul>
