--- a/index.html
+++ b/index.html
@@ -93,16 +93,16 @@
                             <h3 class="team-subtitle">Mark Guerrero</h3>
                             <p class="team-text">Product Designer</p>
                             <ul class="team-list-icon">
-                                <li><a href=""> <svg class="icon-soc-list" width="40" height="40">
+                                <li class="team-item-icon"><a href=""><svg class="icon-soc-list" width="40" height="40">
                                             <use href="./images/icons.svg#icon-instagram-2"></use>
                                         </svg> </a></li>
-                                <li><a href=""> <svg class="icon-soc-list" width="40" height="40">
+                                <li class="team-item-icon"><a href=""> <svg class="icon-soc-list" width="40" height="40">
                                             <use href="./images/icons.svg#icon-twitter-2"></use>
                                         </svg> </a></li>
-                                <li><a href=""> <svg class="icon-soc-list" width="40" height="40">
+                                <li class="team-item-icon"><a href=""> <svg class="icon-soc-list" width="40" height="40">
                                             <use href="./images/icons.svg#icon-facebook-2"></use>
                                         </svg> </a></li>
-                                <li><a href=""> <svg class="icon-soc-list" width="40" height="40">
+                                <li class="team-item-icon"><a href=""> <svg class="icon-soc-list" width="40" height="40">
                                             <use href="./images/icons.svg#icon-linkedin-2"></use>
                                         </svg> </a></li>
                             </ul>
@@ -114,16 +114,16 @@
                             <h3 class="team-subtitle">Tom Ford</h3>
                             <p class="team-text">Frontend Developer</p>
                             <ul class="team-list-icon">
-                                <li><a href=""> <svg class="icon-soc-list" width="40" height="40">
+                                <li class="team-item-icon"><a href=""> <svg class="icon-soc-list" width="40" height="40">
                                     <use href="./images/icons.svg#icon-instagram-2"></use>
                                 </svg> </a></li>
-                                <li><a href=""> <svg class="icon-soc-list" width="40" height="40">
+                                <li class="team-item-icon"><a href=""> <svg class="icon-soc-list" width="40" height="40">
                                     <use href="./images/icons.svg#icon-twitter-2"></use>
                                 </svg> </a></li>
-                                <li><a href=""> <svg class="icon-soc-list" width="40" height="40">
+                                <li class="team-item-icon"><a href=""> <svg class="icon-soc-list" width="40" height="40">
                                     <use href="./images/icons.svg#icon-facebook-2"></use>
                                 </svg> </a></li>
-                                <li><a href=""> <svg class="icon-soc-list" width="40" height="40">
+                                <li class="team-item-icon"><a href=""> <svg class="icon-soc-list" width="40" height="40">
                                     <use href="./images/icons.svg#icon-linkedin-2"></use>
                                 </svg> </a></li>
                             </ul>
@@ -135,16 +135,16 @@
                             <h3 class="team-subtitle">Camila Garcia</h3>
                             <p class="team-text">Marketing</p>
                             <ul class="team-list-icon">
-                                <li><a href=""> <svg class="icon-soc-list" width="40" height="40">
+                                <li class="team-item-icon"><a href=""> <svg class="icon-soc-list" width="40" height="40">
                                     <use href="./images/icons.svg#icon-instagram-2"></use>
                                 </svg> </a></li>
-                                <li><a href=""> <svg class="icon-soc-list" width="40" height="40">
+                                <li class="team-item-icon"><a href=""> <svg class="icon-soc-list" width="40" height="40">
                                     <use href="./images/icons.svg#icon-twitter-2"></use>
                                 </svg> </a></li>
-                                <li><a href=""> <svg class="icon-soc-list" width="40" height="40">
+                                <li class="team-item-icon"><a href=""> <svg class="icon-soc-list" width="40" height="40">
                                     <use href="./images/icons.svg#icon-facebook-2"></use>
                                 </svg> </a></li>
-                                <li><a href=""> <svg class="icon-soc-list" width="40" height="40">
+                                <li class="team-item-icon"><a href=""> <svg class="icon-soc-list" width="40" height="40">
                                     <use href="./images/icons.svg#icon-linkedin-2"></use>
                                 </svg> </a></li>
                             </ul>
@@ -156,16 +156,16 @@
                             <h3 class="team-subtitle">Marketing</h3>
                             <p class="team-text">UI Designer</p>
                             <ul class="team-list-icon">
-                                <li><a href=""> <svg class="icon-soc-list" width="40" height="40">
+                                <li class="team-item-icon"><a href=""> <svg class="icon-soc-list" width="40" height="40">
                                     <use href="./images/icons.svg#icon-instagram-2"></use>
                                 </svg> </a></li>
-                                <li><a href=""> <svg class="icon-soc-list" width="40" height="40">
+                                <li class="team-item-icon"><a href=""> <svg class="icon-soc-list" width="40" height="40">
                                     <use href="./images/icons.svg#icon-twitter-2"></use>
                                 </svg> </a></li>
-                                <li><a href=""> <svg class="icon-soc-list" width="40" height="40">
+                                <li class="team-item-icon"><a href=""> <svg class="icon-soc-list" width="40" height="40">
                                     <use href="./images/icons.svg#icon-facebook-2"></use>
                                 </svg> </a></li>
-                                <li><a href=""> <svg class="icon-soc-list" width="40" height="40">
+                                <li class="team-item-icon"><a href=""> <svg class="icon-soc-list" width="40" height="40">
                                     <use href="./images/icons.svg#icon-linkedin-2"></use>
                                 </svg> </a></li>
                             </ul>
@@ -179,42 +179,61 @@
                 <h2 class="portfolio-title">Our Portfolio</h2>
                 <ul class="portfolio-item">
                     <li class="portfolio-list">
-                        <img class="portfolio-img" width="360" height="300" src="./images/a.jpg" alt="Banking App">
+                        <div class="portfolio-list-img">
+                            <img class="portfolio-img" width="360" height="300" src="./images/a.jpg" alt="Banking App">
+                            <p class="portfolio-text-img"></p>
+                        </div>
                         <div class="portfolio-list-text">
                             <h3 class="portfolio-subtitle">Banking App</h3>
                             <p class="portfolio-text">App</p>
                         </div>
                     </li>
                     <li class="portfolio-list">
-                        <img class="portfolio-img" width="360" height="300" src="./images/s.jpg" alt="Cashless Payment">
+                        <div class="portfolio-list-img">
+                            <img class="portfolio-img" width="360" height="300" src="./images/s.jpg" alt="Cashless Payment">
+                            <p class="portfolio-text-img">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                            Cloud Storage App</p>
+                        </div>
                         <div class="portfolio-list-text">
                             <h3 class="portfolio-subtitle">Cashless Payment</h3>
                             <p class="portfolio-text">Marketing</p>
                         </div>
                     </li>
                     <li class="portfolio-list">
-                        <img class="portfolio-img" width="360" height="300" src="./images/d.jpg" alt="Meditaion App">
+                        <div class="portfolio-list-img">
+                            <img class="portfolio-img" width="360" height="300" src="./images/d.jpg" alt="Meditaion App">
+                            <p class="portfolio-text-img"></p>
+                        </div>
                         <div class="portfolio-list-text">
                             <h3 class="portfolio-subtitle">Meditation App</h3>
                             <p class="portfolio-text">App</p>
                         </div>
                     </li>
                     <li class="portfolio-list">
-                        <img class="portfolio-img" width="360" height="300" src="./images/f.jpg" alt="Taxi Service">
+                        <div class="portfolio-list-img">
+                            <img class="portfolio-img" width="360" height="300" src="./images/f.jpg" alt="Taxi Service">
+                            <p class="portfolio-text-img"></p>
+                        </div>
                         <div class="portfolio-list-text">
                             <h3 class="portfolio-subtitle">Taxi Service</h3>
                             <p class="portfolio-text">Marketing</p>
                         </div>
                     </li>
                     <li class="portfolio-list">
-                        <img class="portfolio-img" width="360" height="300" src="./images/g.jpg" alt="Screen Illustrations">
+                        <div class="portfolio-list-img">
+                            <img class="portfolio-img" width="360" height="300" src="./images/g.jpg" alt="Screen Illustrations">
+                            <p class="portfolio-text-img"></p>
+                        </div>
                         <div class="portfolio-list-text">
                             <h3 class="portfolio-subtitle">Screen Illustrations</h3>
                             <p class="portfolio-text">Design</p>
                         </div>
                     </li>
                     <li class="portfolio-list">
-                        <img class="portfolio-img" width="360" height="300" src="./images/h.jpg" alt="Online Courses">
+                        <div class="portfolio-list-img">
+                            <img class="portfolio-img" width="360" height="300" src="./images/h.jpg" alt="Online Courses">
+                            <p class="portfolio-text-img"></p>
+                        </div>
                         <div class="portfolio-list-text">
                             <h3 class="portfolio-subtitle">Online Courses</h3>
                             <p class="portfolio-text">Marketing</p>
